Style with basic css

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasagna Recipe</title>
+    <link rel="stylesheet" href="../styles.css">
   </head>
   <body>
     <h1>Lasagna</h1>
@@ -11,7 +12,7 @@
       src="https://www.allrecipes.com/thmb/MkKfYU4oim55CLp39DDuNMuyThA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-armag-4x3-1-b24f9ad518d74090bf197828492c64a6.jpg"
       alt="Lasagna Image" height="250">
     <h2>Description</h2>
-    <p>
+    <p class="description">
       This recipe bakes layers of meat sauce, cheese, and noodles in an appetizing combination that will serve many
       people.
       The meat sauce consists of a mixture of beef, sausage, and tomato/tomato sauces;
@@ -19,7 +20,7 @@
       You can serve this lasagna with garlic knots.
     </p>
     <h2>Ingredients</h2>
-    <ul>
+    <ul class="ingredients">
       <li>1 pound sweet Italian sausage</li>
       <li>¾ pound lean ground beef</li>
       <li>½ cup minced onion</li>
@@ -42,7 +43,7 @@
       <li>¾ cup grated Parmesan cheese</li>
     </ul>
     <h2>Steps</h2>
-    <ol>
+    <ol class="steps">
       <li>Gather all ingredients.</li>
       <li>Cook sausage, ground beef, onion, and garlic in a Dutch oven over medium heat until well browned.</li>
       <li>Stir in crushed tomatoes, tomato sauce, tomato paste, and water. Season with sugar, 2 tablespoons parsley,
