--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <ul>
+    <ul class="recipe-list">
       <li><a href="recipes/lasagna.html">Lasagna</a></li>
       <li><a href="recipes/quesadilla.html">Quesadilla</a></li>
       <li><a href="recipes/grilled-cheese.html">Grilled Cheese</a></li>
