--- a/recipes/grilled-cheese.html
+++ b/recipes/grilled-cheese.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grilled Cheese Recipe</title>
+    <link rel="stylesheet" href="../styles.css">
   </head>
   <body>
     <h1>Grilled Cheese</h1>
@@ -13,17 +14,17 @@
     height="250"
     >
     <h2>Description</h2>
-    <p>
+    <p class="description">
       This is a classic grilled cheese sandwich made simply with bread, cheese, and butter.
     </p>
     <h2>Ingredients</h2>
-    <ul>
+    <ul class="ingredients">
       <li>4 slices white bread</li>
       <li>3 tablespoons butter, divided</li>
       <li>2 slices Cheddar cheese</li>
     </ul>
     <h2>Steps</h2>
-    <ol>
+    <ol class="steps">
       <li>
         Preheat a nonstick skillet over medium heat.
         Generously butter one side of a slice of bread.
