--- a/recipes/quesadilla.html
+++ b/recipes/quesadilla.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quesadilla Recipe</title>
+    <link rel="stylesheet" href="../styles.css">
   </head>
   <body>
     <h1>Quesadilla</h1>
@@ -13,12 +14,12 @@
     height="250"
     >
     <h2>Description</h2>
-    <p>
+    <p class="description">
       This vegetarian quesadilla recipe combines cheese, spice, and sweetness for an explosion of flavor.
       It is made from black beans and corns, and can be served with salsa and sour cream.
     </p>
     <h2>Ingredients</h2>
-    <ul>
+    <ul class="ingredients">
       <li>2 teaspoons olive oil</li>
       <li>3 tablespoons finely chopped onion</li>
       <li>1 (15.5 ounce) can black beans, drained and rinsed</li>
@@ -31,7 +32,7 @@
       <li>1 ½ cups shredded Monterey Jack cheese</li>
     </ul>
     <h2>Steps</h2>
-    <ol>
+    <ol class="steps">
       <li>
         Heat olive oil in a large saucepan over medium heat. 
         Cook and stir onion in hot oil until softened, about 2 minutes. 
