--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>
     <h1>Odin Recipes</h1>
     <ul class="recipe-list">
-      <li><a href="recipes/lasagna.html">Lasagna</a></li>
-      <li><a href="recipes/quesadilla.html">Quesadilla</a></li>
-      <li><a href="recipes/grilled-cheese.html">Grilled Cheese</a></li>
+      <li class="recipe-item"><a href="recipes/lasagna.html">Lasagna</a></li>
+      <li class="recipe-item"><a href="recipes/quesadilla.html">Quesadilla</a></li>
+      <li class="recipe-item"><a href="recipes/grilled-cheese.html">Grilled Cheese</a></li>
     </ul>
   </body>
 </html>
